--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
   <meta name="description" content="一个略懂编程的外贸人">
 <meta name="keywords" content="blog, 博客, 外贸, hexo, 产品, 调研">
 <meta property="og:type" content="website">
-<meta property="og:title" content="Shawn&#39;s Blog">
-<meta property="og:url" content="http://yoursite.com/index.html">
-<meta property="og:site_name" content="Shawn&#39;s Blog">
+<meta property="og:title" content="LINQUN&#39;s Blog">
+<meta property="og:url" content="https://linqun.cc/index.html">
+<meta property="og:site_name" content="LINQUN&#39;s Blog">
 <meta property="og:description" content="一个略懂编程的外贸人">
 <meta property="og:locale" content="zh-CN">
 <meta name="twitter:card" content="summary">
-<meta name="twitter:title" content="Shawn&#39;s Blog">
+<meta name="twitter:title" content="LINQUN&#39;s Blog">
 <meta name="twitter:description" content="一个略懂编程的外贸人">
 
 
@@ -339,13 +339,13 @@
     <link itemprop="mainEntityOfPage" href="http://yoursite.com/亚马逊各类流量分析/">
 
     <span hidden itemprop="author" itemscope="" itemtype="http://schema.org/Person">
-      <meta itemprop="name" content="Shawn Lin">
+      <meta itemprop="name" content="LIN QUN">
       <meta itemprop="description" content="一个略懂编程的外贸人">
       <meta itemprop="image" content="/images/avatar.png">
     </span>
 
     <span hidden itemprop="publisher" itemscope="" itemtype="http://schema.org/Organization">
-      <meta itemprop="name" content="Shawn's Blog">
+      <meta itemprop="name" content="LINQUN's Blog">
     </span>
 
     
